# MARS

./: .gitignore  README.md  pyproject.toml
demo/: demo.bed  demo.phe
demo/Categeory.snplist/: Categeory1.snplist  Categeory3.snplist
mars/: __init__.py  config_template.json  main.py
mars/demo/: config.json  demo.bim  demo.fam  demo.npy  main.py
mars/demo/Categeory.snplist/: Categeory2.snplist
mars/models/: dl.py  ml.py  one_dimensional_swin.py  position_emb.py  train.py
mars/preprocess/: fs.py  gblup.py
mars/utils/: config_utils.py  data_utils.py  file_utils.py
